Revert "Addition to fix overflow"
This reverts commit 0dd28b95e6f7dbf04534437e9726c4a1870d58f5.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1168,7 +1168,6 @@ a.accordion-toggle {
   padding-top: 30px;
   padding-bottom: 150px;
   background-color: $brand-accent-lighter;
-  margin: 0 -10px 0 -10px;
 }
 
 .iow-panel {
